--- a/login.html
+++ b/login.html
@@ -315,6 +315,7 @@
         }
 
         /* Responsive Design */
+
         @media (max-width: 768px) {
             .login-container {
                 margin: 10px;
@@ -335,7 +336,13 @@
             }
         }
 
+
         @media (max-width: 576px) {
+            .login-container {
+                margin: 10px;
+                margin-top: 100px;
+            }
+
             .login-left,
             .login-right {
                 padding: 30px 20px;
@@ -345,6 +352,15 @@
                 font-size: 1.5rem;
             }
         }
+
+
+
+        @media (max-width: 400px) {
+    .login-container {
+        margin-top: 100px; /* أو الرقم اللي يناسبك */
+    }
+}
+
     </style>
 </head>
 <body>
