--- a/signup.html
+++ b/signup.html
@@ -354,6 +354,10 @@
         }
 
         @media (max-width: 576px) {
+            .signup-container {
+        margin-top: 100px;
+    }
+
             .signup-left,
             .signup-right {
                 padding: 30px 20px;
@@ -362,6 +366,11 @@
             .signup-form h3 {
                 font-size: 1.5rem;
             }
+        }
+            @media (max-width: 400px) {
+        .signup-container {
+        margin-top: 100px;
+    }
         }
     </style>
 </head>
